# ChangeLog for sys-apps/attr
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/attr/ChangeLog,v 1.63 2006/04/27 22:31:45 antarus Exp $

  27 Apr 2006; Alec Warner <antarus@gentoo.org> Manifest:
  Fixing SHA256 digest, pass four

  20 Apr 2006; Mike Frysinger <vapier@gentoo.org>
  +files/attr-2.4.28-LDFLAGS.patch, attr-2.4.28-r1.ebuild:
  Respect user LDFLAGS #126825 by Diego Pettenò.

  01 Apr 2006; Mike Frysinger <vapier@gentoo.org>
  +files/attr-2.4.28-no-compress-docs.patch, attr-2.4.28-r1.ebuild:
  Dont compress CHANGES, let portage do it #127990 by Matteo Spreafico.

*attr-2.4.28-r1 (28 Mar 2006)

  28 Mar 2006; Mike Frysinger <vapier@gentoo.org>
  +files/attr-2.4.28-list-compat-segv.patch, +attr-2.4.28-r1.ebuild:
  Grab fix from upstream #127547 by TGL.

  19 Feb 2006; Joshua Kinard <kumba@gentoo.org> attr-2.4.24.ebuild:
  Marked stable on mips.

  29 Jan 2006; Simon Stelling <blubb@gentoo.org> attr-2.4.24.ebuild:
  stable on amd64

  28 Jan 2006; Mark Loeser <halcy0n@gentoo.org> attr-2.4.24.ebuild:
  Stable on x86; bug #120490

  28 Jan 2006; Markus Rothe <corsair@gentoo.org> attr-2.4.24.ebuild:
  Stable on ppc64; bug #120490

  27 Jan 2006; Gustavo Zacarias <gustavoz@gentoo.org> attr-2.4.24.ebuild:
  Stable on sparc wrt #120490

  27 Jan 2006; Luca Barbato <lu_zero@gentoo.org> attr-2.4.24.ebuild:
  Marked ppc

  27 Jan 2006; Aron Griffis <agriffis@gentoo.org> attr-2.4.24.ebuild:
  Mark 2.4.24 stable on alpha #120490

*attr-2.4.28 (27 Jan 2006)

  27 Jan 2006; Mike Frysinger <vapier@gentoo.org> +attr-2.4.28.ebuild:
  Version bump.

*attr-2.4.24 (29 Nov 2005)

  29 Nov 2005; Mike Frysinger <vapier@gentoo.org>
  +files/attr-2.4.24-only-symlink-when-needed.patch, +attr-2.4.24.ebuild:
  Version bump and build cleanup.

*attr-2.4.23 (02 Sep 2005)

  02 Sep 2005; Mike Frysinger <vapier@gentoo.org> +attr-2.4.23.ebuild:
  Version bump.

*attr-2.4.19-r1 (21 May 2005)
