@@ -1,0 +1,3 @@
+MD5 092739e9b944815aecc1f5d8379d5ea5 attr_2.4.32-1.tar.gz 80646
+RMD160 b1e8c3f845bdf75106d61ca8e2bb9aa6c9690af5 attr_2.4.32-1.tar.gz 80646
+SHA256 397f565e427e9237537d10345a3b1b09a5f988c4b4035e3bfc1ff5260f20a11d attr_2.4.32-1.tar.gz 80646
